--- a/config.conf
+++ b/config.conf
@@ -1,12 +1,13 @@
 [Network]
-DEBUG: true
-network: 
-port: 
-channels: 
+DEBUG:
+network:
+port:
+channels:
 
 [Bot]
-nick: 
-name: 
+nick:
+name:
 
 [Users]
-admins: 
+admins:
+todo:
